# heart_vertex_sim

./: Makefile  Makefile.am  Makefile.in  cleanscript  compalone.c  compalone.h  config.h  config.h.in  config.status  configure  configure.ac  const.h  definelat.c  definelat.h  dynamics.c  dynamics.h  evolution.c  evolution.h  generatelat.c  generatelat.h  in_development.c  in_development.h  input.c  input.h  lattice.c  lattice.h  locerror.c  locerror.h  measurements.c  measurements.h  opti.c  opti.h  output.txt  pngwrite.c  pngwrite.h  read.c  read.h  save.c  save.h  script_convert  (+2 more)
.deps/: gmo-compalone.Po  gmo-definelat.Po  gmo-dynamics.Po  gmo-evolution.Po  gmo-generatelat.Po  gmo-kevin_tools.Po  gmo-lattice.Po  gmo-locerror.Po  gmo-measurements.Po  gmo-opti.Po  gmo-pngwrite.Po  gmo-read.Po  gmo-save.Po  gmodebug-compalone.Po  gmodebug-definelat.Po  gmodebug-dynamics.Po  gmodebug-evolution.Po  gmodebug-generatelat.Po  gmodebug-kevin_tools.Po  gmodebug-lattice.Po  gmodebug-locerror.Po  gmodebug-measurements.Po  gmodebug-opti.Po  gmodebug-pngwrite.Po  gmodebug-read.Po  gmodebug-save.Po
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
txt/: dynamics_000.txt  dynamics_0000.txt  dynamics_0001.txt  dynamics_0002.txt  dynamics_0003.txt  dynamics_0004.txt  dynamics_0005.txt  dynamics_0006.txt  dynamics_0007.txt  dynamics_0008.txt  dynamics_0009.txt  dynamics_001.txt  dynamics_002.txt  dynamics_003.txt  dynamics_004.txt  dynamics_005.txt  dynamics_006.txt  dynamics_007.txt  dynamics_008.txt  dynamics_009.txt  dynamics_010.txt  (+26 more)
