## Process this file with automake to produce Makefile.in

bin_PROGRAMS = gmo gmodebug

gmo_SOURCES = compalone.c compalone.h evolution.c evolution.h dynamics.c dynamics.h generatelat.c generatelat.h definelat.c definelat.h lattice.c lattice.h read.c read.h save.c save.h pngwrite.c pngwrite.h locerror.c locerror.h measurements.c measurements.h opti.c opti.h in_development.c in_development.h const.h
gmo_CPPFLAGS = -O2

gmodebug_SOURCES = compalone.c compalone.h dynamics.c dynamics.h evolution.c evolution.h generatelat.c generatelat.h definelat.c definelat.h lattice.c lattice.h read.c read.h save.c save.h pngwrite.c pngwrite.h locerror.c locerror.h measurements.c measurements.h opti.c opti.h kevin_tools.c kevin_tools.h const.h
gmodebug_CPPFLAGS = -ggdb -O2 
